upgrade next to 12; fix next/image broken styles

--- a/features/typePage/bestProfileImages/modalBestProfile/styles.module.scss
+++ b/features/typePage/bestProfileImages/modalBestProfile/styles.module.scss
@@ -56,10 +56,10 @@
 
 .moduleGa {
   position: relative;
-  & > div {
-    width: 99%;
+  & > span {
+    width: 90%;
     margin: auto;
-    margin-top: 65px !important;
+    margin-top: 10px !important;
     @include media-xs {
       border-radius: 0;
     }
